--- a/app/index.html
+++ b/app/index.html
@@ -95,12 +95,12 @@
     <!-- Notification Toast -->
     <div id="toast-container"></div>
     
-    <!-- Scripts -->
-    <script src="/app/js/EventEmitter.js"></script>
-    <script src="/app/js/LobbyClient.js"></script>
-    <script src="/app/js/ChatManager.js"></script>
-    <script src="/app/js/GameCanvas.js"></script>
-    <script src="/app/js/UI.js"></script>
-    <script src="/app/js/main.js"></script>
+    <!-- Scripts (compiled from app/js/*.ts) -->
+    <script src="/app/js-out/EventEmitter.js"></script>
+    <script src="/app/js-out/LobbyClient.js"></script>
+    <script src="/app/js-out/ChatManager.js"></script>
+    <script src="/app/js-out/GameCanvas.js"></script>
+    <script src="/app/js-out/UI.js"></script>
+    <script src="/app/js-out/main.js"></script>
 </body>
 </html>
