making a game selector

--- a/app/index.html
+++ b/app/index.html
@@ -70,9 +70,13 @@
                         </div>
                     </div>
                     
-                    <div id="game-canvas-container" class="game-canvas-container">
-                        <canvas id="game-canvas"></canvas>
-                        <div id="click-markers"></div>
+                    <div id="lobby-central" class="lobby-central">
+                        <div id="game-list-container" class="game-list-container hidden"></div>
+                        <div id="game-slot" class="game-slot hidden"></div>
+                        <div id="game-canvas-container" class="game-canvas-container">
+                            <canvas id="game-canvas"></canvas>
+                            <div id="click-markers"></div>
+                        </div>
                     </div>
                     
                     <div class="player-list">
